# finance-app-mvc

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py
app/controllers/: auth.py  ready.py  stocks.py
app/exceptions/: __init__.py
app/models/: __init__.py  base.py  users.py
app/services/: __init__.py  db.py  invest.py  redis.py  s3.py
app/utils/: __init__.py
app/views/: __init__.py  auth.py  base.py  stocks.py
docker/: docker-compose.yml
